# gapi/rpc_create_user.go
@@ -2,21 +2,25 @@ package gapi
 
 import (
 	"context"
-	"database/sql"
-	"errors"
 	"log"
 
 	db "github.com/alrasyidin/simplebank-go/db/sqlc"
 	"github.com/alrasyidin/simplebank-go/pb"
 	"github.com/alrasyidin/simplebank-go/util"
+	"github.com/alrasyidin/simplebank-go/validation"
 	"github.com/lib/pq"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
-	"google.golang.org/protobuf/types/known/timestamppb"
 )
 
 func (server *Server) CreateUser(ctx context.Context, param *pb.CreateUserRequest) (*pb.CreateUserResponse, error) {
-	hashedPassword, err := util.HashPassword(param.GetPassowrd())
+	violations := validateCreateUserRequest(param)
+	if violations != nil {
+		return nil, invalidArgumentError(violations)
+	}
+
+	hashedPassword, err := util.HashPassword(param.GetPassword())
 	if err != nil {
 		return nil, status.Errorf(codes.Internal, "failed to hash the password %s", hashedPassword)
 	}
@@ -25,7 +29,7 @@ func (server *Server) CreateUser(ctx context.Context, param *pb.CreateUserReques
 		Username:       param.GetUsername(),
 		Email:          param.GetEmail(),
 		HashedPassword: hashedPassword,
-		FullName:       param.GetFullname(),
+		FullName:       param.GetFullName(),
 	}
 
 	user, err := server.store.CreateUser(ctx, data)
@@ -46,52 +50,19 @@ func (server *Server) CreateUser(ctx context.Context, param *pb.CreateUserReques
 	return response, nil
 }
 
-func (server *Server) LoginUser(ctx context.Context, param *pb.LoginUserRequest) (*pb.LoginUserResponse, error) {
-
-	user, err := server.store.GetUser(ctx, param.Username)
-	if err != nil {
-		if errors.Is(err, sql.ErrNoRows) {
-			return nil, status.Errorf(codes.NotFound, "user not found")
-		}
-		return nil, status.Errorf(codes.Internal, "failed get user: %w", err)
+func validateCreateUserRequest(param *pb.CreateUserRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := validation.ValidateUsername(param.GetUsername()); err != nil {
+		violations = append(violations, fieldViolation("username", err))
+	}
+	if err := validation.ValidatePassword(param.GetPassword()); err != nil {
+		violations = append(violations, fieldViolation("password", err))
+	}
+	if err := validation.ValidateFullname(param.GetFullName()); err != nil {
+		violations = append(violations, fieldViolation("full_name", err))
+	}
+	if err := validation.ValidateEmail(param.GetEmail()); err != nil {
+		violations = append(violations, fieldViolation("email", err))
 	}
 
-	err = util.CheckPassword(param.Password, user.HashedPassword)
-
-	if err != nil {
-		return nil, status.Errorf(codes.NotFound, "incorrect password")
-	}
-
-	accessToken, accessPayload, err := server.tokenGenerator.CreateToken(user.Username, server.config.AccessTokenDuration)
-	if err != nil {
-		return nil, status.Errorf(codes.Internal, "failed to create access token")
-	}
-	refreshToken, refreshPayload, err := server.tokenGenerator.CreateToken(user.Username, server.config.AccessTokenDuration)
-	if err != nil {
-		return nil, status.Errorf(codes.Internal, "failed to create refresh token")
-	}
-
-	mtdt := extractMetadata(ctx)
-	session, err := server.store.CreateSession(ctx, db.CreateSessionParams{
-		ID:           refreshPayload.Payload.ID,
-		Username:     user.Username,
-		RefreshToken: refreshToken,
-		UserAgent:    mtdt.UserAgent,
-		ClientIp:     mtdt.ClientIP,
-		ExpiresAt:    refreshPayload.ExpiresAt.Time,
-	})
-	if err != nil {
-		return nil, status.Errorf(codes.Internal, "failed to create session")
-	}
-
-	resp := &pb.LoginUserResponse{
-		User:                  convertUser(user),
-		SessionId:             session.ID.String(),
-		AccessToken:           accessToken,
-		AccessTokenExpiresAt:  timestamppb.New(accessPayload.ExpiresAt.Time),
-		RefreshToken:          refreshToken,
-		RefreshTokenExpiresAt: timestamppb.New(refreshPayload.ExpiresAt.Time),
-	}
-
-	return resp, nil
+	return violations
 }
